# la-biblioteca

./: README.md  specs.md
.github/workflows/: rust.yml
biblioteca_backend/: .gitignore  Cargo.toml  openapi.yml
biblioteca_backend/src/: app.rs  database.rs  error.rs  handlers.rs  lib.rs  main.rs  model.rs
biblioteca_backend/src/catalog/: authors.rs  books.rs  db.rs  error.rs  handler.rs  handlers.rs  mod.rs  model.rs
biblioteca_backend/src/db/: database.rs  mod.rs
biblioteca_backend/src/mock/: database.rs
biblioteca_backend/src/users/: controller.rs  db.rs  mod.rs  model.rs  users.rs
biblioteca_backend/tests/: books_tests.rs  tests.rs
biblioteca_backend/tests/e2e/catalog/books/: add_book.rs  get_book.rs  list_books.rs  mod.rs
biblioteca_backend/tests/integration/: mod.rs
biblioteca_backend/tests/integration/catalog/: mod.rs
biblioteca_backend/tests/integration/catalog/authors/: create_author.rs  delete_author.rs  get_author.rs  list_authors.rs  mod.rs  update_author.rs
biblioteca_backend/tests/integration/catalog/books/: create_book.rs  delete_book.rs  get_book.rs  list_books.rs  mod.rs  update_book.rs
biblioteca_backend/tests/integration/users/: mod.rs
biblioteca_backend/tests/integration/users/user/: create_user.rs  delete_user.rs  get_user.rs  list_users.rs  mod.rs
biblioteca_backend/tests/integration/users/user_role/: create_user_role.rs  delete_user_role.rs  get_user_role.rs  list_user_roles.rs  mod.rs
biblioteca_backend/tests/mocker/: api.rs  app.rs  catalog.rs  db.rs  library.rs  mod.rs  users.rs
